--- a/styles/join.css
+++ b/styles/join.css
@@ -223,3 +223,31 @@ article section > p a {
 article .seller-btn{
     background-color: var(--back-color);
 }
+
+#businessNum {
+    width: 346px;
+}
+
+.certify {
+    width: 122px;
+    height: 54px;
+    border-radius: 5px;
+    background-color: var(--main-color);
+    color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.company {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.companyCheck {
+    display: flex;
+    align-items:last baseline;
+    gap: 12px;
+    margin-top: 50px;
+}
+
