--- a/styles/list.css
+++ b/styles/list.css
@@ -33,8 +33,11 @@ body {
 /*header*/
 header {
     display: flex;
+    width: 100%;;
     height: 90px;
     align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
 header h1 img {
