--- a/styles/list.css
+++ b/styles/list.css
@@ -33,11 +33,13 @@ body {
 /*header*/
 header {
     display: flex;
-    width: 100%;;
     height: 90px;
     align-items: center;
     justify-content: center;
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 100;
+    width: 100%;
 }
 
 header h1 img {
@@ -92,6 +94,26 @@ body > section{
     background-position: center left 56px, center right 56px;
 }
 
+.browsing {
+    display: flex;
+    gap: 6px;
+}
+
+.browsing div{
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #fff;
+    position: relative;
+    z-index: 100;
+    left: 50%;
+    top: 474px
+}
+
+.browsing div:first-child {
+    background-color: #000;
+}
+
 /*main*/
 main section {
     margin-top: 80px;
@@ -140,43 +162,39 @@ footer {
 
 /*footer*/
 /*section1*/
-footer div {
+.morePages {
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 525px;
+    justify-content: space-between;
     margin-top: 54px;
+    width: 1280px;
+    border-bottom: 1px solid #c4c4c4;
+    padding-bottom: 22px;
 }
 
-footer div section:nth-child(1) ul {
+.morePages ul {
     display: flex;
 }
 
-footer div section:nth-child(1) ul li a {
+.morePages section:nth-child(1) ul li a {
     font-size: 14px;
 }
 
-footer div section:nth-child(1) ul li a::before{
+.morePages section:nth-child(1) ul li a::before{
     content: "|";
     margin:auto 14px;
 }
 
-footer div section:nth-child(1) ul li:first-child a:before{
+.morePages section:nth-child(1) ul li:first-child a:before{
     content: none;
 }
 
 
+
 /*section2*/
-footer div section:nth-child(2) ul {
+.morePages section:nth-child(2) ul {
     display: flex;
     gap: 14px;
-}
-
-hr {
-    width: 1280px;
-    height: 1px;
-    color: #c4c4c4;
-    margin: 30px auto;
 }
 
 /*address*/
@@ -184,7 +202,6 @@ footer address {
     color: var(--sub-color);
     font-size: 14px;
     line-height: 24px;
-    padding-left: 16.7%;
 }
 
 footer address .companyName{
@@ -206,6 +223,16 @@ footer address span dt::after {
     margin-left: 5px;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+address {
+    width: 1280px;
+    margin-top: 30px;
+}
 
 
 
