--- a/styles/details.css
+++ b/styles/details.css
@@ -33,11 +33,11 @@ body {
 /*header*/
 header {
     display: flex;
-    width: 100%;;
     height: 90px;
     align-items: center;
     justify-content: center;
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.1);
+    width: 100%;
 }
 
 header h1 img {
