--- a/styles/join.css
+++ b/styles/join.css
@@ -88,6 +88,23 @@ article section form {
     padding: 20px 35px 36px;
 }
 
+
+input.error {
+    border: 1px solid #eb5757; 
+}
+
+
+.alertMsg {
+    color: #eb5757;
+    padding: 4px 0;
+    display: none;
+}
+
+input{
+    font-size: 16px;
+    padding: 12px 16px;
+}
+
 .user label {
     padding-bottom: 10px;
 }
@@ -196,8 +213,22 @@ input, .dropdown-btn, .dropdown-content  {
     background-color: #f0f0f0;
 }
 
+.dropdown input.blur {
+    border-color: var(--main-color);
+}
 
-article section > p {
+#num2, #num3 {
+    text-align: center;
+}
+
+.dropdown input:focus {
+    outline: none; /* 기본 포커스 테두리 제거 */
+    border: 1px solid var(--main-color) /* 포커스 시 초록색 테두리 */
+}
+
+
+
+.agree{
     margin: 14px auto 34px;
     background-image: url(/assets/check-box.svg);
     background-repeat: no-repeat;
@@ -206,6 +237,11 @@ article section > p {
     padding-left: 25px;
 
 }
+
+.agree.checked {
+    background-image: url(/assets/check-fill-box.svg); /* 체크된 이미지 */
+}
+
 
 article section > p a {
     text-decoration: underline;
