--- a/styles/details.css
+++ b/styles/details.css
@@ -125,11 +125,11 @@ main section:nth-child(1) {
     margin-top: 20px;
 }
 
-.quantity {
+.aboutProduct {
     margin-top: 138px;
 }
 
-.quantity p {
+.aboutProduct p {
     color: var(--sub-color);
 }
 
@@ -246,4 +246,58 @@ main section:nth-child(2) ul li {
     height: 60px;
     border-bottom: 6px solid #e0e0e0;
     margin-bottom: 359px;
+}
+
+/*모달창*/
+dialog.login-dialog {
+    width: 360px;
+    height: 200px;
+    border: 1px solid #c4c4c4;
+    background-color: #fff;
+    text-align: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0; 
+    padding: 0;
+    padding-top: 50px; 
+}
+
+dialog.login-dialog div p {
+    line-height: 20.03px;
+}
+
+dialog::backdrop {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.delete {
+    position: absolute;
+    top: 18px;
+    right: 18px;
+    cursor: pointer;
+}
+
+.close {
+    margin-left: 75px;
+}
+
+.close , .goToLogin {
+    width: 100px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #c4c4c4;
+    color: var(--sub-color);
+}
+
+.goToLogin {
+    color: #fff;
+    background-color: var(--main-color);
+}
+
+.answer {
+    display: flex;
+    gap: 10px;
+    margin-top: 30px;
 }
