--- a/styles/join.css
+++ b/styles/join.css
@@ -141,11 +141,11 @@ input, .dropdown-btn, .dropdown-content  {
     font-size: 16px;
 }
 
-#pw, #name {
+#pw, #name, #pw2 {
     width: 480px;;
 }
 
-#pw {
+#pw, #pw2 {
     background-image: url(/assets/icon-check-off.svg);
     background-repeat: no-repeat;
     background-position: right 13px center;
