--- a/styles/main.css
+++ b/styles/main.css
@@ -54,7 +54,7 @@ header form > input {
     border: 2px solid var(--main-color);
     border-radius: 50px;
     color: var(--sub-color);
-    background-image: url(/assets/search.png);
+    background-image: url(../assets/search.png);
     background-repeat: no-repeat;
     background-position: center right 22px;
     background-size: 28px;
@@ -130,7 +130,7 @@ body > section{
     background-color: var(--back-color);
     height: 500px;
     width: 100%;
-    background-image: url(/assets/icon-swiper-1.svg), url(/assets/icon-swiper-2.svg);
+    background-image: url(../assets/icon-swiper-1.svg), url(../assets/icon-swiper-2.svg);
     background-repeat: no-repeat;
     background-position: center left 56px, center right 56px;
 }
